--- a/src/js/modules/test1.html
+++ b/src/js/modules/test1.html
@@ -1,4 +1,7 @@
 <div>
     [render:menu_items:<button key='[k]' class='mmenu_item idle' onclick='route'>[v]</button>]
 </div>
+<div>
+    [for:3:<button>hello world [k]</button>]
+</div>
 <div>hola mundo cruel [state:plan]</div>
