html nested conditions, loops and renders. for with collections

--- a/src/js/modules/test1.html
+++ b/src/js/modules/test1.html
@@ -3,6 +3,9 @@
     {%for:3:<button>hello world [k]</button>%}
 </div>
 <div>
+    {%for:[apple-Apple, orange-Orange, banana-Banana, lemon-Lemon]:<button key='[k]'>[v]</button>%}
+</div>
+<div>
     {%render:menu_items:<button key='[k]' class='mmenu_item idle' onclick='route'>[v]</button>%}
 </div>
 <div>hola mundo cruel [state:plan]</div>
